# xmas-lights-2025

./: .gitignore  Cargo.toml  README.md  array_map.exs  lights.service  mix.exs  shell.nix
assets/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
assets/css/: app.css
assets/js/: app.tsx  constants.ts  picker.tsx
config/: config.exs
lib/: blinken_lights.ex
lib/blinken_lights/: application.ex  capture.ex  colour_cycle.ex  dark_mode.ex  display_config.ex  router.ex  state.ex  websocket.ex
src/: animation.rs  bounce.rs  display.rs  layer.rs  leds.rs  main.rs  null.rs  piano.rs  present.rs  reindeer.rs  santa.rs  seventeen.rs  sleigh.rs  snow.rs  snowflake.rs  snowman.rs  spectrum.rs  square.rs  star.rs  terminal.rs  train.rs  tree.rs
test/: blinken_lights_test.exs
test/blinken_lights/: dark_mode_test.exs
