[package]
name = "leds"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
ws281x-rpi = { version = "0.0.1" }
smart-leds = { version = "0.2.0" }
cpal = "0.16.0"
rustfft = "6.4.0"
spectrum-analyzer = "1.7.0"
ringbuf = "0.4.8"
prisma = "0.1.1"
angular-units = "0.2.4"
erlang_port = "0.2.0"
serde_json = "1.0.145"
# smart-leds-trait = "0.3.1"

[features]
leds = []
no-display = []
terminal = []
